stop error messaging from jumping

--- a/app/js/components/queryBuilder/queryModal/_queryModal.scss
+++ b/app/js/components/queryBuilder/queryModal/_queryModal.scss
@@ -52,6 +52,7 @@
   }
 
   &__error {
+    height: 1em;
     margin: 0.5em 0;
     color: $red;
   }
